# abpp_ald_ml

./: .gitignore  README.md  env_conda_general.yaml  env_conda_specific.yaml  pyproject.toml
cache/: prot_seqs.csv
data/raw/: cys ald abpp data sites not added 11062025.xlsx
notebooks/: cys_ald_abpp.ipynb
utils/: preprocessing.py
